--- a/styles/app.css
+++ b/styles/app.css
@@ -5,3 +5,9 @@ html {
 .image-input {
     color: white;
 }
+
+.grass-checkbox {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+}
