--- a/styles/app.css
+++ b/styles/app.css
@@ -2,6 +2,11 @@ html {
     background-color: #333333;
 }
 
+canvas {
+    margin-top: 10px;
+    border: 1px solid white;
+}
+
 .options {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
