--- a/styles/app.css
+++ b/styles/app.css
@@ -1,6 +1,8 @@
 html {
-    background-color: #333333;
     margin-left: 5px;
+    background: rgb(0,0,140);
+    background: linear-gradient(0deg, rgba(0,0,140,1) 0%, rgba(0,0,49,1) 80%, rgba(0,0,8,1) 100%); 
+    background-attachment: fixed;
 }
 
 h3 {
@@ -13,9 +15,17 @@ canvas {
     border: 1px solid white;
 }
 
+a:link, a:visited {
+    color: dodgerblue
+}
+
 .logo {
     max-width: 420px;
     margin-bottom: 10px;
+}
+
+.title {
+    color: #808080;
 }
 
 .highlight {
@@ -28,7 +38,11 @@ canvas {
 
 .block {
     margin-right: 30px;
-    min-width: 300px;
+    min-width: 330px;
+}
+
+.block.narrow {
+    min-width: 180px;
 }
 
 .options {
@@ -39,6 +53,16 @@ canvas {
 
 .options label {
     font-weight: 600;
+    font-size: 15px;
+}
+
+.block.top label {
+    display:block;
+    margin-bottom: 8px;
+}
+
+.block.top input {
+    display: block;
 }
 
 .or {
@@ -56,7 +80,8 @@ canvas {
 }
 
 .output-info {
-    max-width: 470px;
+    max-width: 450px;
+    font-size: 15px;
 }
 
 .texturize-button {
