Add hot reloading tooltip

--- a/styles/app.css
+++ b/styles/app.css
@@ -87,3 +87,34 @@ a:link, a:visited {
 .texturize-button {
     margin-left: 10px;
 }
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    margin-left: 8px;
+    border-radius: 100px;
+    padding: 1px 6px;
+    border: 2px dotted white;
+}
+
+.tooltip .tooltip-text {
+    visibility: hidden;
+    color: white;
+    background-color: #555;
+    text-align: center;
+    width: 170px;
+    border-radius: 2px;
+    padding: 5px 10px;
+    position: absolute;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -70px;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
