--- a/styles/app.css
+++ b/styles/app.css
@@ -118,3 +118,18 @@ a:link, a:visited {
     visibility: visible;
     opacity: 1;
 }
+
+.github-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    fill: #808080;
+    transition: transform 0.2s;
+    transform: scale(1);
+}
+
+.github-icon:hover {
+    fill: white;
+    transform: scale(1.1);
+}
