--- a/styles/app.css
+++ b/styles/app.css
@@ -110,6 +110,21 @@ a:link, a:visited {
     margin-left: 8px;
 }
 
+.download-div {
+    margin-bottom: 15px;
+    max-width: 150px;
+    text-align: center;
+}
+
+.download-div a:link {
+    color: #fbd416;
+    text-decoration-line: none;
+}
+
+.download-div img {
+    height: 50px;
+}
+
 .output-info {
     max-width: 450px;
     font-size: 15px;
@@ -117,6 +132,10 @@ a:link, a:visited {
 
 .texturize-button {
     margin-left: 40px;
+    background-color: #eedc65;
+    border-radius: 2px;
+    border-color: #fbcb23;
+    padding: 2px 6px;
 }
 
 .tooltip {
