--- a/styles/app.css
+++ b/styles/app.css
@@ -54,6 +54,8 @@ canvas {
 .loading-icon {
   position: absolute;
   visibility: hidden;
+  width: 60px;
+  height: 60px;
 }
 
 .loading-icon.active {
@@ -61,14 +63,12 @@ canvas {
 }
 
 .button.loading-icon {
-  scale: 50%;
-  top: -65px;
+  top: -36px;
 }
 
 .canvas.loading-icon {
-  scale: 50%;
-  top: -10px;
-  right: -15px;
+  top: 8px;
+  right: 3px;
 }
 
 .container {
@@ -79,6 +79,7 @@ canvas {
   margin-left: 10px;
   margin-top: 13px;
   flex-direction: column;
+  min-width: 415px;
   width: 415px;
 }
 
@@ -142,7 +143,7 @@ canvas {
   position: absolute;
   margin-top: 2px;
   margin-left: 20px;
-  margin-bottom: 0px;
+  margin-bottom: 2px;
 }
 
 .color-input {
@@ -152,7 +153,7 @@ canvas {
 .background-color-option {
   display: flex;
   align-items: baseline;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .tooltip {
