--- a/styles/app.css
+++ b/styles/app.css
@@ -48,7 +48,6 @@ canvas {
 
 .loading-icon-container {
   display: inline-block;
-  position: relative;
 }
 
 .loading-icon {
@@ -156,6 +155,12 @@ canvas {
   margin-top: 15px;
 }
 
+.button-section {
+  align-items: center;
+  margin-left: 25px;
+  margin-bottom: 10px;
+}
+
 .tooltip {
   position: relative;
   display: inline-block;
@@ -188,16 +193,17 @@ canvas {
 }
 
 .yellow-button {
-  margin-left: 40px;
+  margin-left: 60px;
+  margin-bottom: 10px;
   background-color: #eedc65;
   border-radius: 2px;
   border-color: #fbcb23;
-  padding: 2px 6px;
+  font-weight: 900;
+  font-size: medium;
+  padding: 4px 8px;
 }
 
 .download-button {
-  margin-bottom: 15px;
-  max-width: 150px;
   text-align: center;
 }
 
