--- a/styles/app.css
+++ b/styles/app.css
@@ -184,6 +184,7 @@ canvas {
   align-items: center;
   margin-left: 25px;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .tooltip {
@@ -231,16 +232,68 @@ canvas {
 .yellow-button {
   margin-left: 60px;
   margin-bottom: 10px;
+  padding: 6px 12px;
   background-color: #eedc65;
-  border-radius: 2px;
   border-color: #fbcb23;
+  border-radius: 4px;
   font-weight: 900;
   font-size: medium;
-  padding: 4px 8px;
+  transition: transform 0.1s;
+  transform: scale(1);
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.yellow-button:hover {
+  transform: scale(105%);
+}
+
+.yellow-button::before {
+  content: "";
+  position: absolute;
+  z-index: -2;
+  left: -50%;
+  top: -150%;
+  width: 200%;
+  height: 400%;
+  background-color: #fbcb23;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: conic-gradient(
+    transparent,
+    rgb(223, 153, 24),
+    transparent 30%
+  );
+  animation: rotate 4s linear infinite;
+}
+
+.yellow-button::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 3px;
+  top: 3px;
+  width: calc(100% - 6px);
+  height: calc(100% - 6px);
+  background: #eedc65;
+  border-radius: 4px;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(1turn);
+  }
 }
 
 .download-button {
   text-align: center;
+  transition: transform 0.1s;
+  transform: scale(1);
+}
+
+.download-button:hover {
+  transform: scale(105%);
 }
 
 .download-button a:link {
